# AI-Assisted-Optimisation-of-Enzyme-Production-from-Cereal-Food-Residues

./: .gitignore  GITHUB_SETUP.md  INTERVIEW_NOTES.md  LICENSE  PROJECT_PLAN.md  README.md  README_FA.md  app.py  requirements.txt
artifacts/: run_summary.json
data/processed/: cross_study_xylanase_u_gds.csv  cross_study_xylanase_u_gds_oof_predictions.csv  data_profile.json  within_study_reference_10.csv  within_study_reference_10_oof_predictions.csv  within_study_reference_10_validation.csv
data/raw/: introduction.csv  references.csv  source_workbook.xlsx  ssf_enzyme_production.csv
fair_ssf_opt_build/: CITATION.cff  DATASET_CARD.md  LICENSE_DATA.md  MODEL_CARD.md  pyproject.toml
fair_ssf_opt_build/data/processed/: cohort_summary.csv  cross_study_xylanase_u_gds_feature_importance.csv  cross_study_xylanase_u_gds_validation.csv  within_study_reference_10_feature_importance.csv
fair_ssf_opt_build/metadata/: dataset_description.json  provenance.yaml
fair_ssf_opt_build/scripts/: run_pipeline.py
fair_ssf_opt_build/src/fair_ssf_opt/: __init__.py
fair_ssf_opt_build/tests/: test_features.py
metadata/: data_dictionary.csv
src/fair_ssf_opt/: data.py  features.py  modeling.py  reporting.py
